fix footer scrollbar issue

--- a/app/static/css/account-style.css
+++ b/app/static/css/account-style.css
@@ -19,9 +19,8 @@ nav li:last-child {
   margin-right: 0;
 } */
 
-html{
-  height:100%;
-  width: 100%;
+body {
+  margin: 0;
 }
 
 header{
